# g_reader

./: .gitignore  .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: greader_plugin.dart  greader_plugin_method_channel.dart  greader_plugin_platform_interface.dart
test/: greader_plugin_method_channel_test.dart  greader_plugin_test.dart
windows/: CMakeLists.txt  greader_plugin.cpp  greader_plugin.h  greader_plugin_c_api.cpp
windows/include/greader_plugin/: greader_plugin_c_api.h
windows/src/: greader_api.cpp  greader_api.h
windows/test/: greader_plugin_test.cpp
